--- a/index.html
+++ b/index.html
@@ -95,6 +95,28 @@
       </div>
     </div>
 
+     <div class="container" id="reset" style="display: none">
+      <h1 class="form-title">Reset Password</h1>
+      <p>Enter your email to reset your password</p>
+      <form method="post" action="">
+        <div id="resetMessage" class="messageDiv" style="display: none"></div>
+
+        <div class="input-group">
+          <i class="fas fa-envelope"></i>
+          <input type="email" id="resetEmail" placeholder="Email" required />
+        </div>
+
+        <button class="btn" id="submitReset">Send Reset Link</button>
+      </form>
+
+      <p class="or">--------or--------</p>
+
+      <div class="links">
+        <p>Remembered your password?</p>
+        <button id="rememberButton">Sign In</button>
+      </div>
+    </div>
+
     <script>
       const signUpButton = document.getElementById("signUpButton");
       const signInButton = document.getElementById("signInButton");
