--- a/homepage.html
+++ b/homepage.html
@@ -50,6 +50,17 @@
         id="form"
       ></form>
     </div>
+
+    <form
+      id="emailForm"
+      method="POST"
+      action="https://script.google.com/macros/s/AKfycbzfc2BJoFOfyV43Aam-rvWb7laQiqwH4YTMbQZMhuDks9iaT1wOLE5CxCKjnuEsGsM1/exec"
+    >
+      <input type="hidden" name="to" />
+      <input type="hidden" name="subject" />
+      <input type="hidden" name="message" />
+    </form>
+    
     <script type="module" src="homepage.js"></script>
   </body>
 </html>
