--- a/index.html
+++ b/index.html
@@ -96,14 +96,18 @@
       <h1 class="form-title">Reset Password</h1>
       <p>Enter your email to reset your password</p>
       <form id="resetForm">
+      <div class="input-group">
+
         <input
           type="email"
           id="resetEmail"
           placeholder="Enter your email"
           required
         />
-        <button type="submit" id="submitReset">Reset Password</button>
+      </div>
       </form>
+      <button class="btn" type="submit" id="submitReset">Reset Password</button>
+
 
       <p class="or">--------or--------</p>
 
