--- a/index.html
+++ b/index.html
@@ -96,18 +96,22 @@
       <h1 class="form-title">Reset Password</h1>
       <p>Enter your email to reset your password</p>
       <form id="resetForm">
-      <div class="input-group">
+        <div id="resetMessage" class="messageDiv" style="display: none"></div>
+        <!-- Add this -->
 
-        <input
-          type="email"
-          id="resetEmail"
-          placeholder="Enter your email"
-          required
-        />
-      </div>
+        <div class="input-group">
+          <input
+            type="email"
+            id="resetEmail"
+            placeholder="Enter your email"
+            required
+          />
+        </div>
+
+        <button class="btn" type="submit" id="submitReset">
+          Reset Password
+        </button>
       </form>
-      <button class="btn" type="submit" id="submitReset">Reset Password</button>
-
 
       <p class="or">--------or--------</p>
 
