--- a/index.html
+++ b/index.html
@@ -33,16 +33,21 @@
         <div class="input-group">
           <label for="educationLevel">Level of Education:</label>
           <select id="educationLevel" required>
-            <option value="">-- Select Option --</option>
+             <option value="">-- Select Option --</option>
             <option value="highschool">High School</option>
-            <option value="bachelor">Bachelor's Degree</option>
-            <option value="master">Master's Degree</option>
-            <option value="phd">Doctorate / PhD</option>
+            <option value="bachelor">College</option>
+            <option value="master">Medical School</option>
+            <option value="res">Resident</option>
+            <option value="att">Attending</option>
           </select>
         </div>
 
         <div class="input-group">
-          <input type="email" id="country" placeholder="Country of residence" />
+          <input type="text" id="institution" placeholder="Institution" />
+        </div>
+        
+        <div class="input-group">
+          <input type="text" id="country" placeholder="Country of residence" />
         </div>
 
         <div class="input-group">
