--- a/homepage.html
+++ b/homepage.html
@@ -35,6 +35,8 @@
         </div>
       </div>
       <div class="footer">
+                <button id="toggle-annotations">Show Original Annotations</button>
+
         <button id="home-button">Return to Home</button>
 
         <button id="logout-button">Logout</button>
