--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="footer">
-                <button id="toggle-annotations">Show Original Annotations</button>
+                <button id="toggle-annotations">Show Model Annotations</button>
 
         <button id="home-button">Return to Home</button>
 
